adjusting hifi dashboard, login, change password

--- a/change-password.html
+++ b/change-password.html
@@ -1,107 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
     <title>SB Admin 2 - Login</title>
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
+      href="vendor/fontawesome-free/css/all.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://api.fontshare.com/css?f[]=satoshi@300,301,400,401,500,501,700,701,900,901,1,2&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.css" rel="stylesheet">
+    <link href="css/sb-admin-2.css" rel="stylesheet" />
+    <link href="css/typography.css" rel="stylesheet" />
+  </head>
 
-</head>
+  <body class="bg-white" style="height: 100vh">
+    <div class="container h-100">
+      <div
+        class="fixed-top d-flex align-items-center justify-content-center"
+        style="
+          border-bottom: 1px solid #ededed;
+          box-shadow: 0px 24px 96px rgba(0, 0, 0, 0.02);
+          padding: 24px 0px;
+        "
+      >
+        <a href="index.html">
+          <img class="img-fluid" src="img/logo_deka.svg" alt="..." />
+        </a>
+      </div>
+      <div class="row justify-content-center align-items-center h-100">
+        <div
+          class="card-auth"
+          style="
+            border: 1px solid #eff0f6;
+            box-shadow: 0px 4px 6px rgba(18, 33, 66, 0.1);
+            border-radius: 8px;
+            margin-top: 96px;
+            margin-bottom: 71px;
+            padding: 24px 48px;
+          "
+        >
+          <div class="mb-4">
+            <p class="bold-heading-1 mb-3 neutral-800--text">Ubah Kata Sandi</p>
+            <p class="regular-body mb-5">
+              Masukkan kata sandi baru dengan kombinasi yang lebih baik dari
+              yang anda miliki sebelumnya
+            </p>
+          </div>
 
-<body class="bg-gray-800" style="height: 100vh">
-
-    <div class="container h-100 ">
-        <div class="row justify-content-center align-items-center h-100">
-            <div class="card-auth">
-                <a class="d-flex align-items-center justify-content-center mb-4" href="index.html">
-                    <img class="img-fluid" src="img/logo_deka.svg" alt="..." />
-                </a>
-
-                <div class="mb-4">
-                    <p class="h3 font-weight-bolder text-dark">
-                        Ubah Kata Sandi
-                    </p>
-                    <p>
-                        Masukkan kata sandi baru dengan kombinasi yang lebih baik dari yang anda miliki sebelumnya
-                    </p>
+          <form class="user">
+            <div class="mb-5">
+              <div class="form-group mb-4">
+                <p
+                  class="medium-body neutral-800--text"
+                  style="margin-bottom: 12px"
+                >
+                  Kata Sandi Baru
+                </p>
+                <div class="input-group">
+                  <input
+                    type="password"
+                    class="form-control form-control-user"
+                    id="newPassword"
+                    placeholder="Masukkan password anda..."
+                    style="border-right: none"
+                  />
+                  <button
+                    type="button"
+                    class="custom-icon-button"
+                    onclick="handleShowNewPassword()"
+                  >
+                    <i class="fa fa-eye-slash"></i>
+                  </button>
                 </div>
-
-                 <form class="user">
-                     <div class="mb-5">
-                          <div class="form-group">
-                             <p class="font-weight-bolder"  style="margin-bottom: 12px">Kata Sandi Baru</p>
-                              <div class="input-group">
-                                <input type="password" class="form-control form-control-user"
-                                     id="newPassword" placeholder="Masukkan password anda..." style="border-right: none;">
-                                <button type="button" class="custom-icon-button" onclick="handleShowNewPassword()">
-                                    <i class="fa fa-eye-slash"></i>
-                                </button>
-                             </div>
-                         </div>
-                          <div class="form-group">
-                             <p class="font-weight-bolder"  style="margin-bottom: 12px">Konfirmasi Kata Sandi Baru</p>
-                             <div class="input-group">
-                                <input type="password" class="form-control form-control-user"
-                                     id="confirmPassword" placeholder="Konfirmasi password anda..." style="border-right: none;">
-                                <button type="button" class="custom-icon-button" onclick="handleShowConfirmPassword()">
-                                    <i class="fa fa-eye-slash"></i>
-                                </button>
-                             </div>
-                         </div>
-                         <div class="row no-gutters mt-4 mb-2">
-                             <div class="col m-1 rounded-pill bg-gradient-success" style="height: 3px;"></div>
-                             <div class="col m-1 rounded-pill bg-gradient-success" style="height: 3px;"></div>
-                             <div class="col m-1 rounded-pill bg-gradient-success" style="height: 3px;"></div>
-                             <div class="col m-1 rounded-pill" style="height: 3px; background: rgba(123, 124, 133, 0.4);"></div>
-                         </div>
-                        <p>
-                            Kata sandi yang anda masukkan saat ini sudah cukup baik dan anda bisa mengubah password anda untuk saat ini
-                        </p>
-                     </div>
-                    <a href="reset-password-success.html" class="btn btn-dark bg-gray-700 btn-user btn-block mb-4">
-                        Konfirmasi Kata Sandi
-                    </a>
-                     <a href="/login.html" class="row align-items-center justify-content-center no-gutters text-decoration-none font-weight-bolder text-gray-600">
-                        <i class="fas fa-arrow-left"></i>
-                        <p class="mb-0" style="margin-left: 8px">Kembali ke Login</p>
-                    </a>
-                </form>
+              </div>
+              <div class="form-group">
+                <p
+                  class="medium-body neutral-800--text"
+                  style="margin-bottom: 12px"
+                >
+                  Konfirmasi Kata Sandi Baru
+                </p>
+                <div class="input-group">
+                  <input
+                    type="password"
+                    class="form-control form-control-user"
+                    id="confirmPassword"
+                    placeholder="Konfirmasi password anda..."
+                    style="border-right: none"
+                  />
+                  <button
+                    type="button"
+                    class="custom-icon-button"
+                    onclick="handleShowConfirmPassword()"
+                  >
+                    <i class="fa fa-eye-slash"></i>
+                  </button>
+                </div>
+              </div>
+              <div class="row no-gutters mt-4 mb-2">
+                <div
+                  class="col m-1 rounded-pill bg-gradient-success"
+                  style="height: 3px"
+                ></div>
+                <div
+                  class="col m-1 rounded-pill bg-gradient-success"
+                  style="height: 3px"
+                ></div>
+                <div
+                  class="col m-1 rounded-pill bg-gradient-success"
+                  style="height: 3px"
+                ></div>
+                <div
+                  class="col m-1 rounded-pill"
+                  style="height: 3px; background: rgba(123, 124, 133, 0.4)"
+                ></div>
+              </div>
+              <p>
+                Kata sandi yang anda masukkan saat ini sudah cukup baik dan anda
+                bisa mengubah password anda untuk saat ini
+              </p>
             </div>
+            <a
+              href="reset-password-success.html"
+              class="btn btn-dark bg-primary-600 btn-user btn-block bold-body"
+            >
+              Konfirmasi Kata Sandi
+            </a>
+          </form>
         </div>
+      </div>
+      <div
+        class="fixed-bottom d-flex align-items-center justify-content-center"
+        style="
+          border-top: 1px solid #ededed;
+          box-shadow: 0px 24px 96px rgba(0, 0, 0, 0.02);
+          padding: 24px 0px;
+        "
+      >
+        <p class="regular-metadata neutral-700--text mb-0">
+          2021 Deka Insight. All right reserved.
+        </p>
+      </div>
     </div>
 
     <script>
-        const handleShowNewPassword = () => {
-            let x = document.getElementById("newPassword");
-            if (x.type === "password") {
-                x.type = "text";
-            } else {
-                x.type = "password";
-            }
-        };
+      const handleShowNewPassword = () => {
+        let x = document.getElementById('newPassword')
+        if (x.type === 'password') {
+          x.type = 'text'
+        } else {
+          x.type = 'password'
+        }
+      }
 
-        const handleShowConfirmPassword = () => {
-            let x = document.getElementById("confirmPassword");
-            if (x.type === "password") {
-                x.type = "text";
-            } else {
-                x.type = "password";
-            }
-        };
+      const handleShowConfirmPassword = () => {
+        let x = document.getElementById('confirmPassword')
+        if (x.type === 'password') {
+          x.type = 'text'
+        } else {
+          x.type = 'password'
+        }
+      }
     </script>
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
@@ -112,7 +186,5 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
-
-</body>
-
+  </body>
 </html>
