--- a/reset-password.html
+++ b/reset-password.html
@@ -1,65 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
     <title>SB Admin 2 - Login</title>
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
+      href="vendor/fontawesome-free/css/all.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <!-- <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
+        rel="stylesheet"> -->
+    <link
+      href="https://api.fontshare.com/css?f[]=satoshi@300,301,400,401,500,501,700,701,900,901,1,2&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.css" rel="stylesheet">
+    <link href="css/sb-admin-2.css" rel="stylesheet" />
+    <link href="css/typography.css" rel="stylesheet" />
+  </head>
 
-</head>
+  <body class="bg-image-custom bg-primary-400" style="height: 100vh">
+    <div class="container h-100">
+      <div class="row justify-content-center align-items-center h-100">
+        <div class="card-auth">
+          <a
+            class="d-flex align-items-center justify-content-center"
+            href="index.html"
+          >
+            <img class="img-fluid" src="img/logo_deka.svg" alt="..." />
+          </a>
 
-<body class="bg-gray-800" style="height: 100vh">
+          <a
+            href="/login.html"
+            class="row align-items-center no-gutters mb-5 justify-content-center"
+            style="
+              width: 48px;
+              height: 48px;
+              border: 1px solid #e4e7ec;
+              border-radius: 4px;
+            "
+          >
+            <i class="fas fa-arrow-left primary-500--text"></i>
+          </a>
 
-    <div class="container h-100 ">
-        <div class="row justify-content-center align-items-center h-100">
-            <div class="card-auth">
-                <a class="d-flex align-items-center justify-content-center" href="index.html">
-                    <img class="img-fluid" src="img/logo_deka.svg" alt="..." />
-                </a>
-                
-                <a href="/login.html" class="row align-items-center no-gutters mb-5 text-decoration-none font-weight-bolder text-gray-600">
-                    <i class="fas fa-arrow-left"></i>
-                    <p class="mb-0" style="margin-left: 8px">Kembali ke Login</p>
-                </a>
+          <div class="mb-4">
+            <p class="bold-heading-1 neutral-800--text text-center mb-3">
+              Reset Password
+            </p>
+            <p class="regular-body neutral-700--text text-center">
+              Amet minim mollit non deserunt ullamco est sit aliqua. Amet minim
+              mollit non deserunt ullamco est sit aliqua.
+            </p>
+          </div>
 
-                <div class="mb-4">
-                    <p class="h3 font-weight-bolder text-dark">
-                        Reset Password
-                    </p>
-                    <p>
-                        Amet minim mollit non deserunt ullamco est sit aliqua. Amet minim mollit non deserunt ullamco est sit aliqua.
-                    </p>
-                </div>
-
-                 <form class="user">
-                     <div class="mb-5">
-                         <div class="form-group mb-4">
-                             <p class="font-weight-bolder" style="margin-bottom: 12px">Email</p>
-                             <input type="email" class="form-control form-control-user"
-                                 id="exampleInputEmail" aria-describedby="emailHelp"
-                                 placeholder="Masukkan email anda">
-                         </div>
-                     </div>
-                    <a href="send-email-success.html" class="btn btn-dark bg-gray-700 btn-user btn-block">
-                        Kirim
-                    </a>
-                </form>
+          <form class="user">
+            <div class="mb-5">
+              <div class="form-group mb-4">
+                <p
+                  class="medium-body neutral-800--text"
+                  style="margin-bottom: 12px"
+                >
+                  Email
+                </p>
+                <input
+                  type="email"
+                  class="form-control form-control-user"
+                  id="exampleInputEmail"
+                  aria-describedby="emailHelp"
+                  placeholder="Masukkan email anda"
+                />
+              </div>
             </div>
+            <a
+              href="send-email-success.html"
+              class="btn btn-dark bg-primary-600 btn-user btn-block bold-body"
+            >
+              Kirim
+            </a>
+          </form>
         </div>
+      </div>
     </div>
 
     <!-- Bootstrap core JavaScript-->
@@ -71,7 +103,5 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
-
-</body>
-
+  </body>
 </html>
