--- a/client.html
+++ b/client.html
@@ -40,6 +40,7 @@
       <ul
         class="navbar-nav bg-white sidebar sidebar-light accordion"
         id="accordionSidebar"
+        style="font-size: 24px"
       >
         <!-- Sidebar - Brand -->
         <a
@@ -52,50 +53,91 @@
         <!-- Nav Item - Dashboard -->
         <li class="nav-item">
           <a class="nav-link" href="index.html">
-            <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Dashboard</span>
+            <div class="row no-gutters align-items-center">
+              <div style="width: 24px; margin-right: 24px">
+                <i class="fas fa-list-alt"></i>
+              </div>
+              <span class="bold-bodytext neutral-800--text">Dashboard</span>
+            </div>
           </a>
         </li>
 
         <!-- Nav Item - Client -->
         <li class="nav-item active">
           <a class="nav-link" href="client.html">
-            <i class="fas fa-fw fa-chart-area"></i>
-            <span>Klien</span>
+            <div class="row no-gutters align-items-center">
+              <div style="width: 24px; margin-right: 24px">
+                <i class="fas fa-user"></i>
+              </div>
+              <span class="medium-bodytext neutral-800--text">Klien</span>
+            </div>
           </a>
         </li>
 
         <!-- Nav Item - Proposal -->
         <li class="nav-item">
           <a class="nav-link" href="proposal.html">
-            <i class="fas fa-fw fa-table"></i>
-            <span>Proposal</span>
+            <div class="row no-gutters align-items-center">
+              <div style="width: 24px; margin-right: 24px">
+                <i class="fas fa-file-alt"></i>
+              </div>
+              <span class="medium-bodytext neutral-800--text">Proposal</span>
+            </div>
           </a>
         </li>
 
         <!-- Nav Item - Proyek -->
         <li class="nav-item">
           <a class="nav-link" href="project.html">
-            <i class="fas fa-fw fa-briefcase"></i>
-            <span>Proyek</span>
+            <div class="row no-gutters align-items-center">
+              <div style="width: 24px; margin-right: 24px">
+                <i class="fas fa-briefcase"></i>
+              </div>
+              <span class="medium-bodytext neutral-800--text">Proyek</span>
+            </div>
           </a>
         </li>
 
         <!-- Nav Item - Settings -->
         <li class="nav-item">
           <a class="nav-link" href="settings.html">
-            <i class="fas fa-fw fa-cog"></i>
-            <span>Pengaturan</span>
+            <div class="row no-gutters align-items-center">
+              <div style="width: 24px; margin-right: 24px">
+                <i class="fas fa-cog"></i>
+              </div>
+              <span class="medium-bodytext neutral-800--text">Pengaturan</span>
+            </div>
+          </a>
+        </li>
+
+        <!-- Nav Item - Settings -->
+        <li class="nav-item" style="margin-top: auto">
+          <a class="nav-link" href="login.html">
+            <div class="row no-gutters align-items-center">
+              <div
+                class="bg-error-800"
+                style="
+                  width: 36px;
+                  height: 36px;
+                  border-radius: 8px;
+                  padding: 0px 6px;
+                  margin-right: 24px;
+                "
+              >
+                <i class="fas fa-sign-out-alt" style="color: #db2e57"></i>
+              </div>
+              <span class="medium-bodytext neutral-800--text">Keluar</span>
+            </div>
           </a>
         </li>
 
         <!-- Divider -->
-        <hr class="sidebar-divider d-none d-md-block" />
+        <!-- <hr class="sidebar-divider d-none d-md-block" /> -->
 
         <!-- Sidebar Toggler (Sidebar) -->
-        <div class="text-center d-none d-md-inline">
+        <!-- <div class="text-center d-none d-md-inline">
           <button class="rounded-circle border-0" id="sidebarToggle"></button>
-        </div>
+        </div> -->
       </ul>
       <!-- End of Sidebar -->
 
@@ -222,13 +264,12 @@
               <div class="topbar-divider d-none d-sm-block"></div>
 
               <!-- Nav Item - User Information -->
-              <li class="nav-item dropdown no-arrow">
+              <li class="nav-item">
                 <a
-                  class="nav-link dropdown-toggle"
+                  class="nav-link"
                   href="#"
                   id="userDropdown"
                   role="button"
-                  data-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
                 >
@@ -239,38 +280,7 @@
                   <span class="d-none d-lg-inline text-gray-600 small mr-2"
                     >Joseph Augustus</span
                   >
-                  <i class="fas fa-sm fa-chevron-down"></i>
                 </a>
-                <!-- Dropdown - User Information -->
-                <div
-                  class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                  aria-labelledby="userDropdown"
-                >
-                  <a class="dropdown-item" href="#">
-                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Profile
-                  </a>
-                  <a class="dropdown-item" href="#">
-                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Settings
-                  </a>
-                  <a class="dropdown-item" href="#">
-                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Activity Log
-                  </a>
-                  <div class="dropdown-divider"></div>
-                  <a
-                    class="dropdown-item"
-                    href="#"
-                    data-toggle="modal"
-                    data-target="#logoutModal"
-                  >
-                    <i
-                      class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"
-                    ></i>
-                    Logout
-                  </a>
-                </div>
               </li>
             </ul>
           </nav>
