--- a/send-email-success.html
+++ b/send-email-success.html
@@ -1,54 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
     <title>SB Admin 2 - Login</title>
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
+      href="vendor/fontawesome-free/css/all.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <!-- <link
+      href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+      rel="stylesheet"
+    /> -->
+    <link
+      href="https://api.fontshare.com/css?f[]=satoshi@300,301,400,401,500,501,700,701,900,901,1,2&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.css" rel="stylesheet">
+    <link href="css/sb-admin-2.css" rel="stylesheet" />
+    <link href="css/typography.css" rel="stylesheet" />
+  </head>
 
-</head>
-
-<body class="bg-white" style="height: 100vh">
-    <div class="container h-100 ">
-        <div class="row justify-content-center align-items-center h-100">
-            <div class="card-auth">
-                <div class="mb-4 text-center">
-                    <div class="mx-auto bg-gray-300 d-flex align-items-center justify-content-center mb-4" style="border-radius: 8px; width: 80px; height: 80px;">
-                        <i class="fas fa-2x fa-envelope"></i>
-                    </div>
-
-                    <p class="h3 font-weight-bolder text-dark mb-4">
-                        Verifikasi Email Anda
-                    </p>
-                    <p>
-                        Almost there! We’ve sent a verification email to f********@g****.com. You need to verify your email address to log into Deka CRM Dashboard.
-                    </p>
-
-                    <hr class="my-5">
-
-                    <p>Belum mendapat email? <a href="#">Kirim Kembali</a></p>
-                    
-                    <a href="/login.html" class="row align-items-center justify-content-center no-gutters mb-5 text-decoration-none font-weight-bolder text-gray-600">
-                        <i class="fas fa-arrow-left"></i>
-                        <p class="mb-0" style="margin-left: 8px">Kembali ke Login</p>
-                    </a>
-                </div>
+  <body class="bg-white" style="height: 100vh">
+    <div class="container h-100">
+      <div
+        class="fixed-top d-flex align-items-center justify-content-center"
+        style="
+          border-bottom: 1px solid #ededed;
+          box-shadow: 0px 24px 96px rgba(0, 0, 0, 0.02);
+          padding: 24px 0px;
+        "
+      >
+        <a href="index.html">
+          <img class="img-fluid" src="img/logo_deka.svg" alt="..." />
+        </a>
+      </div>
+      <div class="row justify-content-center align-items-center h-100">
+        <div class="card-auth">
+          <div class="mb-4 text-center">
+            <div
+              class="mx-auto d-flex align-items-center justify-content-center mb-4 bg-primary-100"
+              style="border-radius: 8px; width: 80px; height: 80px"
+            >
+              <i class="fas fa-2x fa-envelope primary-600--text"></i>
             </div>
+
+            <p class="bold-heading-1 neutral-800--text mb-4">
+              Verifikasi Email Anda
+            </p>
+            <p class="neutral-700--text">
+              Almost there! We’ve sent a verification email to
+              f********@g****.com. You need to verify your email address to log
+              into Deka CRM Dashboard.
+            </p>
+
+            <hr class="my-5" />
+
+            <p class="neutral-700--text">
+              Belum mendapat email?
+              <a href="#" class="bold-metadata neutral-700--text"
+                >Kirim Kembali</a
+              >
+            </p>
+          </div>
         </div>
+      </div>
+      <div
+        class="fixed-bottom d-flex align-items-center justify-content-center"
+        style="
+          border-top: 1px solid #ededed;
+          box-shadow: 0px 24px 96px rgba(0, 0, 0, 0.02);
+          padding: 24px 0px;
+        "
+      >
+        <p class="regular-metadata neutral-700--text mb-0">
+          2021 Deka Insight. All right reserved.
+        </p>
+      </div>
     </div>
 
     <!-- Bootstrap core JavaScript-->
@@ -60,7 +99,5 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
-
-</body>
-
+  </body>
 </html>
